# Drone-Autonomy

./: .gitignore  frames_2026-04-24_13.47.01.gv  frames_2026-04-24_14.41.17.gv  frames_2026-04-24_14.41.41.gv  frames_2026-04-24_15.14.33.gv  frames_2026-04-24_15.16.49.gv  frames_2026-04-24_15.23.01.gv  frames_2026-04-24_15.26.44.gv  model.sdf  off_board_rem.txt  run-reminder.txt  start_all.sh  start_bridges.sh  start_bridges.ssh  start_nodes.sh  start_sim.sh  starup.ssh  test_startup.ssh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/spinning_lidar/lib/spinning_lidar/: collect_points
ros2_ws/install/spinning_lidar/share/spinning_lidar/: package.bash  package.dsv  package.ps1  (+3 more)
ros2_ws/log/: latest_build
ros2_ws/src/drone_autonomy/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_autonomy/drone_autonomy/: px4_odom_bridge.py  slam_monitor.py
ros2_ws/src/drone_autonomy/launch/: slam.launch.py
ros2_ws/src/lidar_pitch_sweep/: package.xml  setup.cfg  setup.py
ros2_ws/src/lidar_pitch_sweep/lidar_pitch_sweep/: sweep_node.py
ros2_ws/src/offboard_control/: CMakeLists.txt  offboard_control.cpp  offboard_control.h  package.xml
ros2_ws/src/offboard_control/include/offboard_control/: offboard_control.h
ros2_ws/src/offboard_control/src/: main.cpp  offboard_control.cpp
ros2_ws/src/spinning_lidar/: setup.cfg  setup.py
ros2_ws/src/spinning_lidar/spinning_lidar/: collect_points.py
scripts/: sweep_lidar_pitch.py
(+3911 files in other folders)
